--- a/ui/style.css
+++ b/ui/style.css
@@ -1,12 +1,14 @@
 body {
     font-family: sans-serif;
-    background-color: blue;
+    background-color: lightgrey;
     margin-top: 75px;
 }
 
 .center {
     text-align: center;
 }
+
+
 
 .text-big {
     font-size: 300%;
